// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignUpPage component > fill out the form and submit, 'Invalid fields.' thrown, errors shown 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign up
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400 border-red-600"
        id="email_1234"
        name="email"
        value="dawid@mail.com"
      />
      <span
        class="block text-xs text-red-600"
      >
        E-mail already exists.
      </span>
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="name_1234"
      >
        Name
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="name_1234"
        name="name"
        value="Dawid"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="passwd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign up
    </button>
    <p>
      Already signed up? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-in"
      >
        Sign in.
      </a>
    </p>
  </form>
</div>
`;

exports[`SignUpPage component > fill out the form and submit, 'Invalid fields.' thrown, errors shown 2`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign up
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@email.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="name_1234"
      >
        Name
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400 border-red-600"
        id="name_1234"
        name="name"
        value="D"
      />
      <span
        class="block text-xs text-red-600"
      >
        Name must have from 3 to 256 chars.
      </span>
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400 border-red-600"
        id="password_1234"
        name="password"
        type="password"
        value=""
      />
      <span
        class="block text-xs text-red-600"
      >
        Field must not be empty.
      </span>
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign up
    </button>
    <p>
      Already signed up? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-in"
      >
        Sign in.
      </a>
    </p>
  </form>
</div>
`;

exports[`SignUpPage component > fill out the form and submit, sign up succeeded, show message and redirect 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign up
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@mail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="name_1234"
      >
        Name
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="name_1234"
        name="name"
        value="Dawid"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="passwd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign up
    </button>
    <p>
      Already signed up? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-in"
      >
        Sign in.
      </a>
    </p>
    <p
      class="text-green-600"
    >
      Signed up successfully. You will be redirected to sign in page...
    </p>
  </form>
</div>
`;

exports[`SignUpPage component > fill out the form and submit, unexpected error thrown, error message shown 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign up
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@mail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="name_1234"
      >
        Name
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="name_1234"
        name="name"
        value="Dawid"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="passwd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign up
    </button>
    <p>
      Already signed up? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-in"
      >
        Sign in.
      </a>
    </p>
    <p
      class="text-red-600"
    >
      Unable to process the request. Try again later.
    </p>
  </form>
</div>
`;

exports[`SignUpPage component > render 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign up
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value=""
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="name_1234"
      >
        Name
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="name_1234"
        name="name"
        value=""
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value=""
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign up
    </button>
    <p>
      Already signed up? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-in"
      >
        Sign in.
      </a>
    </p>
  </form>
</div>
`;

exports[`SignUpPage component > type email, name and password, inputs change 1`] = `
<div>
  <form
    class="flex flex-col items-center max-w-sm mx-auto mt-8"
  >
    <h1
      class="mb-4 text-center text-2xl"
    >
      Sign up
    </h1>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="email_1234"
      >
        E-mail
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="email_1234"
        name="email"
        value="dawid@mail.com"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="name_1234"
      >
        Name
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="name_1234"
        name="name"
        value="Dawid"
      />
    </div>
    <div
      class="w-full mb-3 px-8"
    >
      <label
        class="block mb-1 font-medium"
        for="password_1234"
      >
        Password
      </label>
      <input
        class="w-full py-2 px-3 rounded border shadow text-gray-700 outline-none focus:border-blue-400"
        id="password_1234"
        name="password"
        type="password"
        value="passwd"
      />
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 mb-5"
      type="submit"
    >
      Sign up
    </button>
    <p>
      Already signed up? 
       
      <a
        class="font-bold text-blue-500 hover:text-blue-700"
        href="/sign-in"
      >
        Sign in.
      </a>
    </p>
  </form>
</div>
`;
